add scroll to kham pha btn

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
                             </div>
                         </div>
                         <div class="header__banner__vidContainer__foreGroundWrapper__title__bottom">
-                            <button class="loginBtn">
-                                Khám phá
-                            </button>
+                            <a href="#content">
+                                <button class="loginBtn">
+                                    Khám phá
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +109,7 @@
     </header>
     
     
-    <div class="content">
+    <div id="content" class="content">
         <div class="content__latest">
             <div class="content__latest__latestBackground">
                 <div class="backgroundGradient"></div>
