add represent champ

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                         <div class="itemIcon" style="padding-left: 0px">
                                             <img src="./assets/img/itemIcon.png" alt="iconChampion">
                                         </div>
-                                        <h3>Chó săn khát máu</h3>
-                                        <h1>Naafiri</h1>
+                                        <h3>Ngọn lửa dịu êm</h3>
+                                        <h1>Milio</h1>
                                     </div>
                                     <div class="itemButton">
                                         <span class="btnText">Khám phá</span>
@@ -201,8 +201,8 @@
                                         <div class="itemIcon" style="padding-left: 0px">
                                             <img src="./assets/img/itemIcon.png" alt="iconChampion">
                                         </div>
-                                        <h3>Chó săn khát máu</h3>
-                                        <h1>Naafiri</h1>
+                                        <h3>Niềm kiêu hãnh của Nazumah</h3>
+                                        <h1>K'Sante</h1>
                                     </div>
                                     <div class="itemButton">
                                         <span class="btnText">Khám phá</span>
@@ -228,8 +228,8 @@
                                         <div class="itemIcon" style="padding-left: 0px">
                                             <img src="./assets/img/itemIcon.png" alt="iconChampion">
                                         </div>
-                                        <h3>Chó săn khát máu</h3>
-                                        <h1>Naafiri</h1>
+                                        <h3>Hiện thân của niềm vui</h3>
+                                        <h1>Nilah</h1>
                                     </div>
                                     <div class="itemButton">
                                         <span class="btnText">Khám phá</span>
@@ -255,8 +255,8 @@
                                         <div class="itemIcon" style="padding-left: 0px">
                                             <img src="./assets/img/itemIcon.png" alt="iconChampion">
                                         </div>
-                                        <h3>Chó săn khát máu</h3>
-                                        <h1>Naafiri</h1>
+                                        <h3>Nữ chúa hư không</h3>
+                                        <h1>Bel'Veth</h1>
                                     </div>
                                     <div class="itemButton">
                                         <span class="btnText">Khám phá</span>
@@ -278,7 +278,99 @@
 
             </div>
         </div>
+        <div class="content__champRepresent">
+            <div class="content__champRepresent__champRepresentBackground">
+                <div class="gradient"></div>
+            </div>
+            <div class="content__champRepresent__majorHeader" >
+                <img src="./assets/img/itemIcon.png" alt="champion Icon">
+                <h1>
+                    <span>
+                        <span class="titleContainer">
+                            <span class="title" style="font-family: 'Playfair Display', serif;">Tướng tiêu biểu</span>
+                        </span>
+                    </span>
+                </h1>
+            </div>
+            <div class="content__champRepresent__champBanner">
+                <div class="content__champRepresent__champBanner__Wrapper">
+                    <div class="featured">
+                        <div class="bannerContainer">
+                            <div class="champBanner">
+                                <div class="contentItemWrap">
+                                    <a href="">
+                                        <div class="itemBgContainer">
+                                            <div class="childrenImgBg">
+                                                <div class="imgBg">
 
+                                                </div>
+                                                
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="itemInfoContainer">
+                                    <a href="">
+                                        <div class="itemInfoWrapper">
+                                            <div class="itemInfo">
+                                                <div class="infoType">
+                                                    <img src="./assets/img/shurimaIcon.png" alt="shurimaType">
+                                                </div>
+                                                <h2 class="champTitle" style="font-family: 'Playfair Display', serif;">Rammus</h2>
+                                                <ul class="roleAndArea">
+                                                    <li class="roleAndActionCell">
+                                                        <dl>
+                                                            <dt>
+                                                                <span>Vai trò</span>
+                                                            </dt>
+                                                            <dd>
+                                                                <span>Đỡ đòn</span>
+                                                            </dd>
+                                                        </dl>
+                                                    </li>
+                                                    <li class="roleAndActionCell">
+                                                        <dl>
+                                                            <dt>
+                                                                <span>Khu vực</span>
+                                                            </dt>
+                                                            <dd>
+                                                                <span>Shurima</span>
+                                                            </dd>
+                                                        </dl>
+                                                    </li>
+                                                    
+                                                </ul>
+                                                <div class="exploreChamp">
+                                                    <span class="title">
+                                                        <span>Khám phá</span>
+                                                        <span class="arrowBtn">
+                                                            <span class="hoverArrow">
+                                                                <svg version="1.0" x="0px" y="0px" viewBox="0 0 162 70.28" fill="#937341" style="width: 17px;"><circle fill="#937341" cx="31.57" cy="35.21" r="11.57"></circle><g><polygon fill="#937341" points="124.18,70.39 118.31,64.09 149.37,35.22 118.31,6.35 124.18,0.05 162,35.22"></polygon><rect x="84.61" y="29.76" fill="#937341" width="65" height="11.06"></rect></g></svg>
+                                                            </span>
+                                                            <span class="restArrow">
+                                                                <svg version="1.0" x="0px" y="0px" viewBox="0 0 162 70.28" fill="#c4b998" style="width: 17px;"><circle fill="#c4b998" cx="31.57" cy="35.21" r="11.57"></circle><g><polygon fill="#c4b998" points="124.18,70.39 118.31,64.09 149.37,35.22 118.31,6.35 124.18,0.05 162,35.22"></polygon><rect x="84.61" y="29.76" fill="#c4b998" width="65" height="11.06"></rect></g></svg>
+                                                            </span>
+                                                        </span>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="framer">
+                        <span class="topRightHorLine"></span>
+                        <span class="topLeftHorLine"></span>
+                        <span class="topRightVerLine"></span>
+                        <span class="topLeftVerLine"></span>
+                        <span class="botRightVerLine"></span>
+                        <span class="botLeftVerLine"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer class="footer">
 
