add dashChamps and explore

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="content__gridContainer">
                 <ul class="content__gridContainer__grid">
                     <li class="itemGridSmall allGridItem" style="float: left;">
-                        <a href="">
+                        <a href="./pages/news1.html">
                             <div class="itemContent">
                                 <div class="itemBackground" style="background-image: url('./assets/img/naafiri.jpg');"></div>
                                 <div class="itemBottom">
