--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                         </a>
                     </li>
                     <li class="itemGridSmall allGridItem" style="float: left">
-                        <a href="">
+                        <a href="./pages/news2.html">
                             <div class="itemContent">
-                                <div class="itemBackground" style="background-image: url('./assets/img/naafiri.jpg');"></div>
+                                <div class="itemBackground" style="background-image: url('./assets/img/milio-splash.jpg');"></div>
                                 <div class="itemBottom">
                                     <div class="itemTitles">
                                         <div class="itemIcon" style="padding-left: 0px">
@@ -193,9 +193,9 @@
                         </a>
                     </li>
                     <li class="itemGridBig allGridItem" style="float: right">
-                        <a href="">
+                        <a href="./pages/news3.html">
                             <div class="itemContent">
-                                <div class="itemBackground" style="background-image: url('./assets/img/naafiri.jpg');"></div>
+                                <div class="itemBackground" style="background-image: url('./assets/img/ksante-splash.jpg');"></div>
                                 <div class="itemBottom">
                                     <div class="itemTitles">
                                         <div class="itemIcon" style="padding-left: 0px">
@@ -220,9 +220,9 @@
                         </a>
                     </li>
                     <li class="itemGridSmall allGridItem" style="float: left">
-                        <a href="">
+                        <a href="./pages/news4.html">
                             <div class="itemContent">
-                                <div class="itemBackground" style="background-image: url('./assets/img/naafiri.jpg');"></div>
+                                <div class="itemBackground" style="background-image: url('./assets/img/nilah-splash.jpg');"></div>
                                 <div class="itemBottom">
                                     <div class="itemTitles">
                                         <div class="itemIcon" style="padding-left: 0px">
@@ -247,9 +247,9 @@
                         </a>
                     </li>
                     <li class="itemGridSmall allGridItem" style="float: left">
-                        <a href="">
+                        <a href="./pages/news5.html">
                             <div class="itemContent">
-                                <div class="itemBackground" style="background-image: url('./assets/img/naafiri.jpg');"></div>
+                                <div class="itemBackground" style="background-image: url('./assets/img/belveth-splash.jpg');"></div>
                                 <div class="itemBottom">
                                     <div class="itemTitles">
                                         <div class="itemIcon" style="padding-left: 0px">
@@ -298,7 +298,7 @@
                         <div class="bannerContainer">
                             <div class="champBanner">
                                 <div class="contentItemWrap">
-                                    <a href="">
+                                    <a href="./pages/news6.html">
                                         <div class="itemBgContainer">
                                             <div class="childrenImgBg">
                                                 <div class="imgBg">
@@ -310,7 +310,7 @@
                                     </a>
                                 </div>
                                 <div class="itemInfoContainer">
-                                    <a href="">
+                                    <a href="./pages/news6.html">
                                         <div class="itemInfoWrapper">
                                             <div class="itemInfo">
                                                 <div class="infoType">
