--- a/pages/news2.html
+++ b/pages/news2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naafiri - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
+    <title>Milio - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -66,14 +66,14 @@
             <div class="border" style="z-index: 10000; position: relative;"></div>
             <div class="content__readNavi">
                 <div class="content__readNavi__title">
-                    <img src="../assets/img/shurimaIcon.png" alt="" class="typeIcon">
+                    <img src="../assets/img/ixtal_crest_icon.png" alt="" class="typeIcon">
                     <h3 style="font-family: 'Playfair Display', serif;">
                         <a href="">
                             <span class="" style="color: #937341">Tướng</span>
                         </a>
                     </h3>
                     <img src="../assets/img/styleArrow.png" alt="">
-                    <h3>Naafiri</h3>
+                    <h3>Milio</h3>
                 </div>
                 <div class="content__readNavi__pagePosition">
                     <div class="goToTop">
@@ -83,7 +83,7 @@
                         <li class="pagePosItem activePos">
                             <a href="#content">
                                 <div class="pagePosClickBox"></div>
-                                <h3 class="pagePosTitle">Naafiri</h3>
+                                <h3 class="pagePosTitle">Milio</h3>
                             </a>
                         </li>
                         <li class="pagePosItem inactivePos">
@@ -100,12 +100,12 @@
                 <div class="content__banner">
                     <div class="content__banner__section">
                         <div class="minHeight">
-                            <div class="bannerBackground" style="background-image: url(../assets/img/naafiri.jpg);">
+                            <div class="bannerBackground" style="background-image: url(../assets/img/milio-splash.jpg);">
                                 <div class="bannerChild">
                                     <div class="bannerTitle">
-                                        <span style="font-family: 'Playfair Display', serif;" class="title">Naafiri</span>
+                                        <span style="font-family: 'Playfair Display', serif;" class="title">Milio</span>
                                         <img src="../assets/img/champBannerSectionLine.png" alt="" class="line">
-                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Chó săn khát máu</h3>
+                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Ngọn lửa dịu êm</h3>
                                     </div>
                                 </div>
                             </div>
@@ -119,12 +119,14 @@
                     <div class="gridContainer">
                         <div class="avatarWrapper">
                             <div class="champIcon">
-                                <div class="champ" style="background-image: url(../assets/img/naafiri.jpg);"></div>
+                            <div class="champ" style="
+                            background-image: url(../assets/img/milio-splash.jpg);
+                            background-position: 49.4792% 32.4074%;"></div>
                                 <img class="ring" src="../assets/img/ChampionIconFrame.png" alt="">
                             </div>
                         </div>
                         <ul class="relatedChampsContainer">
-                            <li class="champRace">
+                            <!-- <li class="champRace">
                                 <a href="">
                                     <div class="race">
                                         <h5 >
@@ -133,7 +135,7 @@
                                         <h6 style="font-family: 'Playfair Display', serif;">Darkin</h6>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
                             <li class="relatedChamps">
                                 <div class="header">
                                     <h5><span style="font-family: 'Playfair Display', serif;">Tướng liên quan</span></h5>
@@ -194,20 +196,24 @@
                         <div class="champQuoteContainer">
                             <ul class="champQuote">
                                 <li class="quote">
-                                    <p style="font-family: 'Playfair Display', serif;">“Chúng ta sẽ truy lùng suốt một nghìn năm. 
-                                        Chẳng ai có thể lẩn trốn lâu đến vậy.”</p>
-                                    <h5 style="font-family: 'Playfair Display', serif;">~ Naafiri</h5>
+                                    <p style="font-family: 'Playfair Display', serif;">“Ánh sáng trong tâm, nội hỏa của chính mình... 
+                                        Chính là trái tim rực cháy của tôi.”</p>
+                                    <h5 style="font-family: 'Playfair Display', serif;">~ Milio</h5>
                                 </li>
                                 <li class="biography">
                                     <div class="bioBg"></div>
                                     <div class="bioText">
                                         <p style="font-family: 'Playfair Display', serif;">
-                                            Những tiếng tru đồng thanh vang vọng khắp các cồn cát ở Shurima. 
-                                            Đây chính là âm thanh của những đàn chó săn sa mạc, loài thú săn 
-                                            mồi theo bầy đàn khát máu và luôn tranh giành quyền săn mồi trên 
-                                            vùng đất cằn cỗi này. Trong số đó, tồn tại một đàn thống trị tất 
-                                            cả, vì động lực của chúng không bắt nguồn từ bản năng săn mồi, mà 
-                                            từ sức mạnh cổ xưa của tộc Darkin.
+                                            Milio là một cậu bé nhân hậu sinh ra và lớn lên tại 
+                                            Ixtal. Dù còn rất trẻ, nhưng cậu đã làm chủ ngọn lửa 
+                                            cũng như khám phá ra nguyên lý mới: ngọn lửa dịu êm. 
+                                            Với sức mạnh mới khám phá của mình, Milio muốn giúp 
+                                            gia đình thoát khỏi cảnh lưu đầy bằng cách gia nhập 
+                                            Yun Tal, giống như bà của cậu đã từng làm. Sau hành 
+                                            trình dài xuyên qua những khu rừng Ixtal tới thủ đô 
+                                            của Ixaocan, Milio đã sẵn sàng đối mặt với thử thách 
+                                            Vidalion và gia nhập Yun Tal mà không hề hay biết điều 
+                                            nguy hiểm nào đang chờ đợi phía trước.
                                         </p>
                                         <a href="">
                                             <button class="moreChampStory">
@@ -230,28 +236,28 @@
                             <ul>
                                 <li class="playerType">
                                     <div class="typeIcon">
-                                        <img src="../assets/img/role_icon_assassin.png" alt="">
+                                        <img src="../assets/img/role_icon_support.png" alt="">
                                     </div>
                                     <div class="typeDesc">
                                         <div>
                                             <h5><span style="font-family: 'Playfair Display', serif;">Vai trò</span></h5>
-                                            <h6 style="font-family: 'Playfair Display', serif;">Sát thủ</h6>
+                                            <h6 style="font-family: 'Playfair Display', serif;">Hỗ trợ</h6>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="champArea">
                                     <div class="areaEmblem">
-                                        <img src="../assets/img/shurima_emblem.png" alt="">
+                                        <img src="../assets/img/ixtal_emblem.png" alt="">
                                     </div>
                                     <a class="exploreLink" href="">
                                         <div class="areaName">
                                             <div class="top">
                                                 <div class="areaText">
                                                     <h5><span>Khu vực liên quan</span></h5>
-                                                    <h6><span>Shurima</span></h6>
+                                                    <h6><span>Ixtal</span></h6>
                                                 </div>
                                                 <div class="areaIcon">
-                                                    <img src="../assets/img/shurimaIcon.png" alt="">
+                                                    <img src="../assets/img/ixtal_crest_icon.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="navi">
@@ -300,10 +306,10 @@
                         <ul class="champsList">
                             <li class="champListItem" >
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Morgana.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/MasterYi_0.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Morgana</h1>
+                                                <h1 style="font-family: 'Playfair Display', serif;">Master Yi</h1>
                                                 <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
@@ -324,10 +330,10 @@
                             
                             <li class="champListItem" style="margin-right: 0;">
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Nami.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/MissFortune_0.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Nami</h1>
+                                                <h1 style="font-family: 'Playfair Display', serif;">Miss Fortune</h1>
                                                 <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
