--- a/pages/news3.html
+++ b/pages/news3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naafiri - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
+    <title>K'Sante - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -73,7 +73,7 @@
                         </a>
                     </h3>
                     <img src="../assets/img/styleArrow.png" alt="">
-                    <h3>Naafiri</h3>
+                    <h3>K'Sante</h3>
                 </div>
                 <div class="content__readNavi__pagePosition">
                     <div class="goToTop">
@@ -83,7 +83,7 @@
                         <li class="pagePosItem activePos">
                             <a href="#content">
                                 <div class="pagePosClickBox"></div>
-                                <h3 class="pagePosTitle">Naafiri</h3>
+                                <h3 class="pagePosTitle">K'Sante</h3>
                             </a>
                         </li>
                         <li class="pagePosItem inactivePos">
@@ -100,12 +100,13 @@
                 <div class="content__banner">
                     <div class="content__banner__section">
                         <div class="minHeight">
-                            <div class="bannerBackground" style="background-image: url(../assets/img/naafiri.jpg);">
+                            <div class="bannerBackground" style="background-image: url(../assets/img/ksante-splash.jpg);
+                            background-position: 33.8542% 18.5185%;">
                                 <div class="bannerChild">
                                     <div class="bannerTitle">
-                                        <span style="font-family: 'Playfair Display', serif;" class="title">Naafiri</span>
+                                        <span style="font-family: 'Playfair Display', serif;" class="title">K'Sante</span>
                                         <img src="../assets/img/champBannerSectionLine.png" alt="" class="line">
-                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Chó săn khát máu</h3>
+                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Niềm kiêu hãnh của nazumah</h3>
                                     </div>
                                 </div>
                             </div>
@@ -119,12 +120,14 @@
                     <div class="gridContainer">
                         <div class="avatarWrapper">
                             <div class="champIcon">
-                                <div class="champ" style="background-image: url(../assets/img/naafiri.jpg);"></div>
+                            <div class="champ" style="
+                            background-image: url(../assets/img/ksante-splash.jpg);
+                            background-position: 33.8542% 18.5185%;"></div>
                                 <img class="ring" src="../assets/img/ChampionIconFrame.png" alt="">
                             </div>
                         </div>
                         <ul class="relatedChampsContainer">
-                            <li class="champRace">
+                            <!-- <li class="champRace">
                                 <a href="">
                                     <div class="race">
                                         <h5 >
@@ -133,7 +136,7 @@
                                         <h6 style="font-family: 'Playfair Display', serif;">Darkin</h6>
                                     </div>
                                 </a>
-                            </li>
+                            </li> -->
                             <li class="relatedChamps">
                                 <div class="header">
                                     <h5><span style="font-family: 'Playfair Display', serif;">Tướng liên quan</span></h5>
@@ -194,20 +197,22 @@
                         <div class="champQuoteContainer">
                             <ul class="champQuote">
                                 <li class="quote">
-                                    <p style="font-family: 'Playfair Display', serif;">“Chúng ta sẽ truy lùng suốt một nghìn năm. 
-                                        Chẳng ai có thể lẩn trốn lâu đến vậy.”</p>
-                                    <h5 style="font-family: 'Playfair Display', serif;">~ Naafiri</h5>
+                                    <p style="font-family: 'Playfair Display', serif;">“Chẳng có quái vật nào lớn hơn được niềm kiêu hãnh cả.”</p>
+                                    <h5 style="font-family: 'Playfair Display', serif;">~ K'Sante</h5>
                                 </li>
                                 <li class="biography">
                                     <div class="bioBg"></div>
                                     <div class="bioText">
                                         <p style="font-family: 'Playfair Display', serif;">
-                                            Những tiếng tru đồng thanh vang vọng khắp các cồn cát ở Shurima. 
-                                            Đây chính là âm thanh của những đàn chó săn sa mạc, loài thú săn 
-                                            mồi theo bầy đàn khát máu và luôn tranh giành quyền săn mồi trên 
-                                            vùng đất cằn cỗi này. Trong số đó, tồn tại một đàn thống trị tất 
-                                            cả, vì động lực của chúng không bắt nguồn từ bản năng săn mồi, mà 
-                                            từ sức mạnh cổ xưa của tộc Darkin.
+                                            Tràn đầy thách thức và dũng cảm, K’Sante đã chiến 
+                                            đấu với vô số quái vật khổng lồ cũng như các thể 
+                                            thăng hoa tàn bạo để bảo vệ quê nhà của mình, ốc 
+                                            đảo Nazumah giữa lòng sa mạc Shurima. Nhưng sau 
+                                            khi những cuộc cãi vã nổ ra giữa anh và bạn đời 
+                                            của mình, K’Sante đã nhận ra rằng để trở thành một 
+                                            chiến binh xứng đáng lãnh đạo Nazumah, anh ta phải 
+                                            kiềm chế lòng kiêu hãnh của mình. Khi đó, K’Sante 
+                                            mới có thể đánh bại kẻ thù và bảo vệ người dân Nazumah.
                                         </p>
                                         <a href="">
                                             <button class="moreChampStory">
@@ -230,12 +235,12 @@
                             <ul>
                                 <li class="playerType">
                                     <div class="typeIcon">
-                                        <img src="../assets/img/role_icon_assassin.png" alt="">
+                                        <img src="../assets/img/role_icon_tank.png" alt="">
                                     </div>
                                     <div class="typeDesc">
                                         <div>
                                             <h5><span style="font-family: 'Playfair Display', serif;">Vai trò</span></h5>
-                                            <h6 style="font-family: 'Playfair Display', serif;">Sát thủ</h6>
+                                            <h6 style="font-family: 'Playfair Display', serif;">Đỡ đòn</h6>
                                         </div>
                                     </div>
                                 </li>
@@ -300,10 +305,10 @@
                         <ul class="champsList">
                             <li class="champListItem" >
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Morgana.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/KogMaw_0.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Morgana</h1>
+                                                <h1 style="font-family: 'Playfair Display', serif;">Kog'Maw</h1>
                                                 <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
@@ -324,10 +329,10 @@
                             
                             <li class="champListItem" style="margin-right: 0;">
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Nami.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/Leblanc_0.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Nami</h1>
+                                                <h1 style="font-family: 'Playfair Display', serif;">Leblanc</h1>
                                                 <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
