update page rammus

--- a/pages/news6.html
+++ b/pages/news6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bel'Veth - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
+    <title>Rammus - Tướng - Vũ trụ Liên Minh Huyền Thoại</title>
 
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -66,14 +66,14 @@
             <div class="border" style="z-index: 10000; position: relative;"></div>
             <div class="content__readNavi">
                 <div class="content__readNavi__title">
-                    <img src="../assets/img/void_crest_icon.png" alt="" class="typeIcon">
+                    <img src="../assets/img/shurimaIcon.png" alt="" class="typeIcon">
                     <h3 style="font-family: 'Playfair Display', serif;">
                         <a href="">
                             <span class="" style="color: #937341">Tướng</span>
                         </a>
                     </h3>
                     <img src="../assets/img/styleArrow.png" alt="">
-                    <h3>Bel'Veth</h3>
+                    <h3>Rammus</h3>
                 </div>
                 <div class="content__readNavi__pagePosition">
                     <div class="goToTop">
@@ -83,7 +83,7 @@
                         <li class="pagePosItem activePos">
                             <a href="#content">
                                 <div class="pagePosClickBox"></div>
-                                <h3 class="pagePosTitle">Bel'Veth</h3>
+                                <h3 class="pagePosTitle">Rammus</h3>
                             </a>
                         </li>
                         <li class="pagePosItem inactivePos">
@@ -100,13 +100,13 @@
                 <div class="content__banner">
                     <div class="content__banner__section">
                         <div class="minHeight">
-                            <div class="bannerBackground" style="background-image: url(../assets/img/belveth-splash.jpg);
+                            <div class="bannerBackground" style="background-image: url(../assets/img/rammus.jpg);
                             background-position: 33.8542% 18.5185%;">
                                 <div class="bannerChild">
                                     <div class="bannerTitle">
-                                        <span style="font-family: 'Playfair Display', serif;" class="title">Bel'Veth</span>
+                                        <span style="font-family: 'Playfair Display', serif;" class="title">Rammus</span>
                                         <img src="../assets/img/champBannerSectionLine.png" alt="" class="line">
-                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Nữ chúa của hư không</h3>
+                                        <h3 style="font-family: 'Playfair Display', serif;" class="subtitle">Tê tê gai</h3>
                                     </div>
                                 </div>
                             </div>
@@ -121,8 +121,8 @@
                         <div class="avatarWrapper">
                             <div class="champIcon">
                             <div class="champ" style="
-                            background-image: url(../assets/img/belveth-splash.jpg);
-                            background-position: 46.875% 27.7778%;"></div>
+                            background-image: url(../assets/img/rammus.jpg);
+                            background-position: 64.1152% 29.1492%;"></div>
                                 <img class="ring" src="../assets/img/ChampionIconFrame.png" alt="">
                             </div>
                         </div>
@@ -197,24 +197,22 @@
                         <div class="champQuoteContainer">
                             <ul class="champQuote">
                                 <li class="quote">
-                                    <p style="font-family: 'Playfair Display', serif;">“Thế giới này sẽ không bị lãng quên. Ta sẽ thay thế nó—đứa trẻ đang cắn xé chính đấng sinh thành của nó.”</p>
-                                    <h5 style="font-family: 'Playfair Display', serif;">~ Bel'Veth</h5>
+                                    <p style="font-family: 'Playfair Display', serif;">“Được”</p>
+                                    <h5 style="font-family: 'Playfair Display', serif;">~ Rammus</h5>
                                 </li>
                                 <li class="biography">
                                     <div class="bioBg"></div>
                                     <div class="bioText">
                                         <p style="font-family: 'Playfair Display', serif;">
-                                            Một nữ chúa quỷ quyệt được tạo ra từ những loại 
-                                            vật liệu thô từ cả một thành phố đã bị nuốt chửng, 
-                                            Bel’Veth chính là cái kết của Runeterra… và là khởi 
-                                            đầu của thực tại kinh hoàng mà ả hằng mong muốn. Dẫn 
-                                            đường bởi những kỉ nguyên của lịch sử, kiến thức, và 
-                                            những kỉ niệm từ thế giới bên trên được viết lại, ả 
-                                            ngấu nghiến cái nhu cầu trải nghiệm và cảm xúc mới, 
-                                            thu nhập tất cả những gì đi qua con đường của ả. Thế 
-                                            nhưng nhu cầu của ả chưa bao giờ có thể thoả mãn được 
-                                            chỉ bằng một thế giới khi ả hướng khát vọng cháy bỏng 
-                                            của mình tới những cựu thần của Hư Không…
+                                            Nhiều người thần tượng, có kẻ xua đuổi, bí ẩn 
+                                            với tất cả, sinh vật tò mò Rammus luôn luôn khó 
+                                            hiểu. Được lớp vỏ gai bảo vệ, Rammus tạo cảm hứng 
+                                            cho ngày càng nhiều lý thuyết về nguồn gốc của nó, 
+                                            không cần biết nó đặt chân đến nơi nào - từ bán thần, 
+                                            nhà tiên tri thần thánh, đến một con thú tầm thường 
+                                            bị ma thuật làm biến dạng. Dù sự thật có ra sao, 
+                                            Rammus vẫn giữ nguyên ý định của nó và chẳng dừng 
+                                            lại với ai trên đường lang thang giữa sa mạc.
                                         </p>
                                         <a href="">
                                             <button class="moreChampStory">
@@ -237,28 +235,28 @@
                             <ul>
                                 <li class="playerType">
                                     <div class="typeIcon">
-                                        <img src="../assets/img/role_icon_fighter.png" alt="">
+                                        <img src="../assets/img/role_icon_tank.png" alt="">
                                     </div>
                                     <div class="typeDesc">
                                         <div>
                                             <h5><span style="font-family: 'Playfair Display', serif;">Vai trò</span></h5>
-                                            <h6 style="font-family: 'Playfair Display', serif;">Đấu sĩ</h6>
+                                            <h6 style="font-family: 'Playfair Display', serif;">Đỡ đòn</h6>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="champArea">
                                     <div class="areaEmblem">
-                                        <img src="../assets/img/void_emblem.png" alt="">
+                                        <img src="../assets/img/shurima_emblem.png" alt="">
                                     </div>
                                     <a class="exploreLink" href="">
                                         <div class="areaName">
                                             <div class="top">
                                                 <div class="areaText">
                                                     <h5><span>Khu vực liên quan</span></h5>
-                                                    <h6><span>Hư không</span></h6>
+                                                    <h6><span>Shurima</span></h6>
                                                 </div>
                                                 <div class="areaIcon">
-                                                    <img src="../assets/img/void_crest_icon.png" alt="">
+                                                    <img src="../assets/img/shurimaIcon.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="navi">
@@ -307,10 +305,10 @@
                         <ul class="champsList">
                             <li class="champListItem" >
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Bard_0.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/rakan-splash.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Bard</h1>
+                                                <h1 style="font-family: 'Playfair Display', serif;">Rakan</h1>
                                                 <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
@@ -331,11 +329,11 @@
                             
                             <li class="champListItem" style="margin-right: 0;">
                                 <a href="">
-                                    <div class="itemBg" style="background-image: url(../assets/img/Blitzcrank_0.jpg);">
+                                    <div class="itemBg" style="background-image: url(../assets/img/RekSai_0.jpg);">
                                         <div class="itemChild">
                                             <div class="itemName">
-                                                <h1 style="font-family: 'Playfair Display', serif;">Nocturne</h1>
-                                                <h2><span style="font-family: 'Playfair Display', serif;">Blitzcrank</span></h2>
+                                                <h1 style="font-family: 'Playfair Display', serif;">RekSai</h1>
+                                                <h2><span style="font-family: 'Playfair Display', serif;">Runeterra</span></h2>
                                             </div>
                                             <div class="itemAction">
                                                 <span class="text">Khám phá</span>
