add footer (by Phat)

--- a/pages/news2.html
+++ b/pages/news2.html
@@ -10,6 +10,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="../site.webmanifest">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/mail.css' rel='stylesheet'>
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/facebook.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <!-- CSS -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/home.css">
@@ -359,7 +362,19 @@
 
     </div>
     <footer class="footer">
-
+        <div class="footer_lolverse">
+            <h1>LoLVerse</h1>
+            <h4>Made by Nguyen Thanh Dat & Le Thanh Phat</h4>
+            <a href="https://www.facebook.com/joitaro">
+                <i class="gg-facebook"></i>
+            </a>
+            <a href="https://mailto:nguyenthanhdat1412joitaro@gmail.com">
+                <i class="gg-mail"></i>
+            </a>
+            <a href="https://github.com/joi-lightyears">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
     </footer>
 </body>
 </html>
